--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/007/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/007/a/index.xhtml
@@ -31,10 +31,10 @@
                     data-bind="click: register,enable: $root.errors.isEmpty() &amp;&amp; enableButtonRegistration()">#{i18n.getText('QMM007_2')}</button>
 
             <button id="A1_3" tabindex="3"
-                    data-bind="enable: false">#{i18n.getText('QMM007_3')}</button>
+                    data-bind=" enable: false">#{i18n.getText('QMM007_3')}</button>
 
             <button id="A1_4" tabindex="4"
-                    data-bind=" enable: false">#{i18n.getText('QMM007_4')}</button>
+                    data-bind=" click: exportExcel;, enable: $root.errors.isEmpty()">#{i18n.getText('QMM007_4')}</button>
 
         </div>
         <div  class="fixed-flex-layout" style="margin-top: 10px">
