--- a/nts.uk/uk.mobile/ClientApp/views/ccg/007/b/index.html
+++ b/nts.uk/uk.mobile/ClientApp/views/ccg/007/b/index.html
@@ -1,58 +1,56 @@
-<div id="login">
-    <div class="text-center page-title">UniversalK</div>
-    <fieldset class="login-form">
-        <nts-dropdown
-            v-model="model.comp"
-            v-bind:inline-title="true"
-            name='CCG007_7'
-            v-bind:disabled="false"
-            v-bind:show-title="true"
-            v-bind:constraint="validations.model.comp"
-            v-bind:errors-always="$errors.model.comp"
-            v-bind:columns="{ title: 'col-md-2', input: 'col-md-4' }">
-            <option value="">--- Choose options ---</option>
-            <option v-for="(comp,k) in companies" :value="comp.companyCode">
-                {{comp.companyCode}}&nbsp;&nbsp;&nbsp;{{comp.companyName}}
-            </option>
-        </nts-dropdown>
-        
-        <nts-text-editor
-            v-model="model.employeeCode"
-            v-bind:inline-title="true"
-            name='CCG007_8'
-            v-bind:disabled="disabled"
-            v-bind:show-title="true"
-            v-bind:constraint="validations.model.employeeCode"
-            v-bind:errors-always="$errors.model.employeeCode"
-            v-bind:columns="{ title: 'col-md-2', input: 'col-md-4' }"
-            @keyup.enter="login" />
+<div id="login" class="pt-4">
+    <div class="row justify-content-md-center">
+        <div class="col-lg-4 col-md-6">
+            <div class="text-center page-title">UniversalK</div>
+            <fieldset class="login-form">
+                <nts-dropdown
+                    name='CCG007_7'
+                    v-model="model.comp"
+                    v-bind:inline-title="true"
+                    v-bind:disabled="false"
+                    v-bind:show-title="true"
+                    v-bind:columns="{ title: 'col-lg-4 col-sm-6', input: 'col-lg-8 col-sm-6' }">
+                    <option value="">--- Choose options ---</option>
+                    <option v-for="(comp,k) in companies" :value="comp.companyCode">
+                        {{comp.companyCode}}&nbsp;&nbsp;&nbsp;{{comp.companyName}}
+                    </option>
+                </nts-dropdown>
+                
+                <nts-text-editor
+                    name='CCG007_8'
+                    v-model="model.employeeCode"
+                    v-bind:inline-title="true"
+                    v-bind:disabled="disabled"
+                    v-bind:show-title="true"
+                    v-bind:columns="{ title: 'col-lg-4 col-sm-6', input: 'col-lg-8 col-sm-6' }"
+                    @keyup.enter="login" />
 
-        <nts-input-password
-            v-model="model.password"
-            v-bind:inline-title="true"
-            name='CCG007_2'
-            v-bind:disabled="disabled"
-            v-bind:show-title="true"
-            v-bind:constraint="validations.model.password"
-            v-bind:errors-always="$errors.model.password"
-            v-bind:columns="{ title: 'col-md-2', input: 'col-md-4' }" 
-            @keyup.enter="login" />
+                <nts-input-password
+                    name='CCG007_2'
+                    v-model="model.password"
+                    v-bind:inline-title="true"
+                    v-bind:disabled="disabled"
+                    v-bind:show-title="true"
+                    v-bind:columns="{ title: 'col-lg-4 col-sm-6', input: 'col-lg-8 col-sm-6' }"
+                    @keyup.enter="login" />
 
-        <div class="text-center">
-            <nts-checkbox 
-                v-model="model.autoLogin"
-                v-bind:value="true"
-                v-bind:disabled="false">
-                {{ 'CCG007_5' | i18n }}
-            </nts-checkbox>
+                <nts-checkbox 
+                    v-model="model.autoLogin"
+                    v-bind:value="true"
+                    v-bind:disabled="false">
+                    {{ 'CCG007_5' | i18n }}
+                    </nts-checkbox>
+
+                <div class="mt-3">
+                    <button class="btn btn-primary btn-block" @click="login"> {{'CCG007_3' | i18n}}</button>
+                    <div class="text-center mt-2">
+                        <button class="btn btn-link" @click="forgetPass"> {{ 'CCG007_6' | i18n }} </button>
+                    </div>
+                </div>
+            </fieldset>
+            <div class="text-right mt-3">
+                <label> {{ model.ver }} </label>
+            </div>
         </div>
-
-        <button class="btn btn-primary btn-block" @click="login"> {{'CCG007_3' | i18n}}</button>
-        <div class="text-center">
-            <button class="btn btn-link" @click="forgetPass"> {{ 'CCG007_6' | i18n }} </button>
-        </div>
-    </fieldset>
-    <div class="text-right">
-        <label> {{ model.ver }} </label>
     </div>
 </div>
