QMM010 & QMM008 Coding

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/d/index.xhtml
@@ -56,8 +56,11 @@
             <button class="proceed" data-bind="click: update,enable: $root.errors.isEmpty" id="D1_2"
                     tabindex="2">#{i18n.getText('QMM008_1')}</button>
             <button id="D1_3" tabindex="3" data-bind="enable: $vm.isEnableBtnPdf()">#{i18n.getText('QMM008_2')}</button>
+            <button tabindex="4"
+                    data-bind="click: exportExcel, enable: true">#{i18n.getText('QMM008_5')}</button>
             <button class="danger" id="D1_4" tabindex="4"
                     data-bind="click: deleteOffice , enable: $vm.isEnableBtnDelete()">#{i18n.getText('QMM008_107')}</button>
+
             <button id="D1_5" tabindex="5" data-bind="click: closeDialog">#{i18n.getText('QMM008_108')}</button>
         </div>
         <div id="contents-area" class="fixed-flex-layout">
