--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/b/index1.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/b/index1.xhtml
@@ -13,7 +13,9 @@
 		<button tabindex="1"
 			data-bind="click: registerBusinessEstablishment, enable: true">#{i18n.getText('QMM008_4')}</button>
 		<button tabindex="1"
-			data-bind="click: masterCorrectionLog, enable: false">#{i18n.getText('QMM008_5')}</button>
+				data-bind="click: masterCorrectionLog, enable: false">#{i18n.getText('QMM008_5')}</button>
+		<button tabindex="1"
+			data-bind="click: exportExcel, enable: true">#{i18n.getText('QMM008_5')}</button>
 	</div>
 	<div style="margin-top: 30px;" class="contents-area fixed-flex-layout">
 		<!-- B1_1 健康保険料率一覧 -->
