--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/f/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/f/index.xhtml
@@ -25,6 +25,8 @@
 			<div style="margin-bottom: 15px;margin-left: 10px;">
 				<button class="proceed" id="F1_1" tabindex="1"
 						data-bind="click: update, enable: $root.errors.isEmpty">#{i18n.getText('QMM008_1')}</button>
+				<button tabindex="1"
+						data-bind="click: exportExcel, enable: true">#{i18n.getText('QMM008_5')}</button>
 				<button id="F1_2" tabindex="2" data-bind="enable: $vm.isEnableBtnPdf()">#{i18n.getText('QMM008_2')}</button>
 				<button id="F1_3" class="danger" tabindex="3" data-bind="click: countReview">#{i18n.getText('QMM008_141')}</button>
 				<button id="F1_4" tabindex="4" data-bind="click: closeDialog">#{i18n.getText('QMM008_108')}</button>
