--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/010/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/010/a/index.xhtml
@@ -44,6 +44,7 @@
                 <button id="A1_4" tabindex="4"
                         data-bind="click: readFromSocialInsuranceOffice">#{i18n.getText('QMM010_4')}</button>
                 <button id="A1_5" tabindex="5" data-bind="click: masterCorrection, enable: false">#{i18n.getText('QMM010_5')}</button>
+                <button tabindex="5" data-bind="click: exportExcel, enable: true">#{i18n.getText('QMM010_5')}</button>
                 <button id="A1_6" class="danger" tabindex="6"
                             data-bind="click: deleteOffice, enable: screenMode() == 1">#{i18n.getText('QMM010_6')}</button>
             </div>
