--- a/nts.uk/uk.mobile/ClientApp/styles/lumen/input.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/lumen/input.scss
@@ -7,6 +7,9 @@
       .fa {
         color: #fff;
       }
+      .input-group-append {
+        z-index: 99;
+      }
       .form-control {
         color: #fff;
       }
