--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/a/index.xhtml
@@ -79,89 +79,46 @@
 				</div>
 				
 				<div class="fixed-flex-layout-right" style="padding-top: 20px;" data-bind="with: selectedInfor">
-					<div data-bind="if: $vm.initMode == 0"> <!-- Workplace Mode -->
-						<div class="valign-center control-group">
-							<div data-bind="ntsFormLabel: {  required: true, constraint: 'WorkplaceCode' }">#{i18n.getText('CMM011-0_12')}</div>
-							<input tabindex="12" id="A5_2" data-bind="ntsTextEditor: {
-								name: '#[CMM011-0_12]',
-								value: code,
-								constraint: 'WorkplaceCode',
-								required: true, enable: true}" />
-						</div>
-						<div class="valign-center control-group">
-							<div data-bind="ntsFormLabel: {  required: true, constraint: 'WorkplaceName' }">#{i18n.getText('CMM011-0_13')}</div>
-							<input tabindex="13" id="A6_2" data-bind="ntsTextEditor: {
-								name: '#[CMM011-0_13]',
-								value: name,
-								constraint: 'WorkplaceName',
-								required: true, enable: true}" />
-						</div>
-						<div class="valign-center control-group">
-							<div data-bind="ntsFormLabel: {  required: true, constraint: 'WorkplaceDisplayName' }">#{i18n.getText('CMM011-0_14')}</div>
-							<input tabindex="14" id="A7_2" data-bind="ntsTextEditor: {
-								name: '#[CMM011-0_14]',
-								value: dispName,
-								constraint: 'WorkplaceDisplayName',
-								required: true, enable: true}" />
-						</div>
-						<div class="valign-center control-group">
-							<div data-bind="ntsFormLabel: {  required: true, constraint: 'WorkplaceGeneric' }">#{i18n.getText('CMM011-0_15')}</div>
-							<input tabindex="15" id="A8_2" data-bind="ntsTextEditor: {
-								name: '#[CMM011-0_15]',
-								value: genericName,
-								constraint: 'WorkplaceGeneric',
-								required: true, enable: true}" />
-						</div>
-						<div class="valign-center control-group">
-							<div data-bind="ntsFormLabel: {  required: true, constraint: 'WorkplaceExternalCode' }">#{i18n.getText('CMM011-0_16')}</div>
-							<input tabindex="16" id="A9_2" data-bind="ntsTextEditor: {
-								name: '#[CMM011-0_16]',
-								value: externalCode,
-								constraint: 'WorkplaceExternalCode',
-								required: true, enable: true}" />
-						</div>
+					<div class="valign-center control-group">
+						<div data-bind="ntsFormLabel: {  required: true, constraint: 'WorkplaceCode' }">#{i18n.getText('CMM011-0_12')}</div>
+						<input tabindex="12" id="A5_2" data-bind="ntsTextEditor: {
+							name: '#[CMM011-0_12]',
+							value: code,
+							constraint: 'WorkplaceCode',
+							required: true, enable: true}" />
 					</div>
-					<div data-bind="if: $vm.initMode == 1"> <!-- Department Mode -->
-						<div class="valign-center control-group">
-							<div data-bind="ntsFormLabel: {  required: true, constraint: 'DepartmentCode' }">#{i18n.getText('CMM011-0_12')}</div>
-							<input tabindex="12" id="A5_2" data-bind="ntsTextEditor: {
-								name: '#[CMM011-0_12]',
-								value: code,
-								constraint: 'DepartmentCode',
-								required: true, enable: true}" />
-						</div>
-						<div class="valign-center control-group">
-							<div data-bind="ntsFormLabel: {  required: true, constraint: 'DepartmentName' }">#{i18n.getText('CMM011-0_13')}</div>
-							<input tabindex="13" id="A6_2" data-bind="ntsTextEditor: {
-								name: '#[CMM011-0_13]',
-								value: name,
-								constraint: 'DepartmentName',
-								required: true, enable: true}" />
-						</div>
-						<div class="valign-center control-group">
-							<div data-bind="ntsFormLabel: {  required: true, constraint: 'DepartmentDisplayName' }">#{i18n.getText('CMM011-0_14')}</div>
-							<input tabindex="14" id="A7_2" data-bind="ntsTextEditor: {
-								name: '#[CMM011-0_14]',
-								value: dispName,
-								constraint: 'DepartmentDisplayName',
-								required: true, enable: true}" />
-						</div>
-						<div class="valign-center control-group">
-							<div data-bind="ntsFormLabel: {  required: true, constraint: 'DepartmentGeneric' }">#{i18n.getText('CMM011-0_15')}</div>
-							<input tabindex="15" id="A8_2" data-bind="ntsTextEditor: {
-								name: '#[CMM011-0_15]',
-								value: genericName,
-								constraint: 'DepartmentGeneric',
-								required: true, enable: true}" />
-						</div>
-						<div class="valign-center control-group">
-							<div data-bind="ntsFormLabel: {  required: true, constraint: 'DepartmentExternalCode' }">#{i18n.getText('CMM011-0_16')}</div>
-							<input tabindex="16" id="A9_2" data-bind="ntsTextEditor: {
-								name: '#[CMM011-0_16]',
-								value: externalCode,
-								constraint: 'DepartmentExternalCode',
-								required: true, enable: true}" />
-						</div>
+					<div class="valign-center control-group">
+						<div data-bind="ntsFormLabel: {  required: true, constraint: 'WorkplaceName' }">#{i18n.getText('CMM011-0_13')}</div>
+						<input tabindex="13" id="A6_2" data-bind="ntsTextEditor: {
+							name: '#[CMM011-0_13]',
+							value: name,
+							constraint: 'WorkplaceName',
+							required: true, enable: true}" />
+					</div>
+					<div class="valign-center control-group">
+						<div data-bind="ntsFormLabel: {  required: true, constraint: 'WorkplaceDisplayName' }">#{i18n.getText('CMM011-0_14')}</div>
+						<input tabindex="14" id="A7_2" data-bind="ntsTextEditor: {
+							name: '#[CMM011-0_14]',
+							value: dispName,
+							constraint: 'WorkplaceDisplayName',
+							required: true, enable: true}" />
+					</div>
+					<div class="valign-center control-group">
+						<div data-bind="ntsFormLabel: {  required: true, constraint: 'WorkplaceGeneric' }">#{i18n.getText('CMM011-0_15')}</div>
+						<input tabindex="15" id="A8_2" data-bind="ntsTextEditor: {
+							name: '#[CMM011-0_15]',
+							value: genericName,
+							constraint: 'WorkplaceGeneric',
+							option: { width: '512px' },
+							required: true, enable: true}" />
+					</div>
+					<div class="valign-center control-group">
+						<div data-bind="ntsFormLabel: {  required: false, constraint: 'WorkplaceExternalCode' }">#{i18n.getText('CMM011-0_16')}</div>
+						<input tabindex="16" id="A9_2" data-bind="ntsTextEditor: {
+							name: '#[CMM011-0_16]',
+							value: externalCode,
+							constraint: 'WorkplaceExternalCode',
+							required: false, enable: true}" />
 					</div>
 				</div>
 			</div>
