--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/011_v2/b/index.xhtml
@@ -58,10 +58,10 @@
 				        <div tabindex="5" id="B3_5" data-bind="ntsDatePicker: {
 							name: '#[CMM011-0_26]', 
 							required: true, 
-							value: selectedStartDate, 
+							value: selectedStartDateInput, 
 							dateFormat: 'YYYY/MM/DD', 
 							enable: true}, visible: screenMode() == 1 || screenMode() == 2 || screenMode() == 3"></div>
-						<span class="label" data-bind="text: selectedStartDate, visible: screenMode() == 0"></span>
+						<span class="label" data-bind="text: selectedStartDateText, visible: screenMode() == 0"></span>
 						<span class="label">#{i18n.getText('CMM011-0_25')}</span>
 						<span class="label" data-bind="text: selectedEndDate"></span>
 					</div>
@@ -73,7 +73,7 @@
 				</div>
 			</div>
 			<div id="functions-area-bottom">
-				<button class="x-large proceed" tabindex="7" data-bind="click: registerConfig">#{i18n.getText('CMM011-0_27')}</button>
+				<button class="x-large proceed" tabindex="7" data-bind="click: registerConfig, enable: $root.errors.isEmpty">#{i18n.getText('CMM011-0_27')}</button>
 				<button class="large" tabindex="8" data-bind="click: cancel">#{i18n.getText('CMM011-0_28')}</button>
 			</div>
 		</ui:define>
