--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/013/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/013/a/index.xhtml
@@ -36,14 +36,17 @@
 					#{i18n.getText('QMM013_3')}
 				</button>
 				<!-- マスタ修正ログ -->
-				<button id="A1_4" tabindex="4" class="" data-bind="click : exportExcel,enable: true">
+				<button id="A1_4" tabindex="4" class="" data-bind="enable: false">
 					#{i18n.getText('QMM013_4')}
 				</button>
 				<!-- 削除 -->
 				<button id="A1_5" tabindex="5" class="deleteBtn danger" data-bind="click: deleteItem, enable: !checkCreate()">
 					#{i18n.getText('QMM013_5')}
 				</button>
-
+				<!-- Export Excel -->
+				<button id="" tabindex="5" class="" data-bind="click: exportExcel, enable: true">
+					#{i18n.getText('QMM013_41')}
+				</button>
 			</div>
 			<div id="contents-area">
 				<div class="fixed-flex-layout-left">
