CDL008 & KCP004: update for department mode

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cdl/008/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cdl/008/a/index.xhtml
@@ -19,7 +19,8 @@
 			<div id="contents-area">
 				<div class="workplaceContent" tabindex="-1">
 					<div class="lableCDL" tabindex="-1">
-						<label>#{i18n.getText('CDL008_2')}</label>
+						<label data-bind="if: startMode == 0">#{i18n.getText('CDL008_2')}</label>
+						<label data-bind="if: startMode == 1">#{i18n.getText('CDL008_6')}</label>
 					</div>
 					<div id="workplaceList" tabindex="-1"></div>
 				</div>
