--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cdl/008/demo/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cdl/008/demo/index.xhtml
@@ -28,6 +28,16 @@
 					<div>
 						<table>
 							<tr>
+								<td class="header-text">起動モード:</td>
+								<td class="content-sample"><div
+										data-bind="ntsRadioBoxGroup: {
+										 options: listStartMode,
+									     optionsValue: 'code',
+									     optionsText: 'name',
+									     value: selectedStartMode,
+									     enable: enable}"></div></td>
+							</tr>
+							<tr>
 								<td class="header-text">基準日</td>
 								<td class="content-sample">
 									<div
