add picker plugins

--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -24,3 +24,4 @@
 @import './lumen/time-editor.scss';
 @import './lumen/dropdown.scss';
 @import './lumen/floatbtn.scss';
+@import './lumen/picker.scss';
