--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/008/e/index.xhtml
@@ -34,6 +34,7 @@
 						data-bind="enable: $vm.isEnableBtnPdf()">#{i18n.getText('QMM008_2')}</button>
 					<button id="E1_3" class="danger" tabindex="3" data-bind="click: count">#{i18n.getText('QMM008_141')}</button>
 					<button id="E1_4" tabindex="4" data-bind="click: closeDialog">#{i18n.getText('QMM008_108')}</button>
+                    <button  tabindex="4" data-bind="click: exportExcel">#{i18n.getText('QMM008_213')}</button>
 				</div>
 			</div>
 			<div id="contents-area" style="margin-left: 15px;">
