107220. add document about autoAdjustHeight

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/catalog/sidemenu.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/catalog/sidemenu.xhtml
@@ -156,6 +156,7 @@
 		<li><a href="/nts.uk.com.web/view/kcp/003/index.xhtml"><span class="label label-new"></span>KCP003 JobTitle List</a></li>
 		<li><a href="/nts.uk.com.web/view/kcp/004/index.xhtml"><span class="label label-new"></span>KCP004 WorkPlace List</a></li>
 		<li><a href="/nts.uk.com.web/view/kcp/005/index.xhtml"><span class="label label-new"></span>KCP005 Employee List</a></li>
+		<li><a href="/nts.uk.com.web/view/kcp/1-5/index.xhtml"><span class="label label-new"></span>KCP List Component</a></li>
 		<li><a href="/nts.uk.at.web/view/kcp/006/a/index.xhtml"><span class="label label-new"></span>KCP006 Calendar</a></li>
 		<li><a href="/nts.uk.com.web/view/kcp/009/index.xhtml"><span class="label label-new"></span>KCP009 Employee Feeds</a></li>
 		<li><a href="/nts.uk.com.web/view/kcp/010/index.xhtml"><span class="label label-new"></span>KCP010 WorkPlace Feeds</a></li>
