--- a/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
+++ b/nts.uk/uk.mobile/ClientApp/styles/dashboard.scss
@@ -25,3 +25,5 @@
 @import './lumen/dropdown.scss';
 @import './lumen/floatbtn.scss';
 @import './lumen/picker.scss';
+
+@import './lumen/transition.scss';
